fix: puppy card in browse is stretching

--- a/src/components/PuppyCard/PuppyCard.module.scss
+++ b/src/components/PuppyCard/PuppyCard.module.scss
@@ -3,6 +3,7 @@
 .card {
   @include centerFlexRow;
   position: relative;
+  height: 100%;
   margin-bottom: 1.5rem;
   cursor: pointer;
   overflow: hidden;
@@ -21,10 +22,16 @@
     box-shadow: 0 0 1rem rgba(black, 0.8);
     border-radius: 20px;
   }
-  &Img {
+  .cardImgWrapper {
     position: relative;
-    height: 260px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
+    .cardImg {
+      width: 100%;
+      height: 100%;
+      position: relative !important;
+      object-fit: cover;
+    }
   }
   &Tag {
     position: absolute;
