--- a/src/components/PuppyGrid/PuppyGrid.module.scss
+++ b/src/components/PuppyGrid/PuppyGrid.module.scss
@@ -2,3 +2,9 @@
   margin-top: 5rem;
   width: 100%;
 }
+
+.gridCol {
+  position: relative;
+  height: 300px;
+  margin-bottom: 1rem;
+}
